Remove Extra spaces.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
     <link href="style.css" rel="stylesheet" type="text/css" />
-
-    
 </head>
 <body>
     <div class="container">
@@ -38,11 +35,9 @@
                 </div>
             </div>
         </div>
-
-        <div id="error-box">
-        </div>
+        <div id="error-box"></div>
     </div>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
